@@ -3,6 +3,8 @@ CHANGES.txt - OpenPrinting CUPS Filters v1.0.5 - 2011-03-08
 
 CHANGES IN V1.0.5
 
+	- pdftops: Added insertion of workaround PostScript code for printers
+	  with bugs in their PS interpreters (Ubuntu bugs #950713, #951627).
 	- parallel backend: Break infinite loop (Ubuntu bug #936647).
 	- texttopdf: Complete the implementation of fontconfig-based font
 	  selection (Debian bug #663070).
